demo/public/css/main.css
/* ... */
.t-center {
  text-align: center
}

.t-left {
  text-align: left
}

.t-right {
  text-align: right
}

.t-white,
.t-white * {
  color: #fff;
  fill: #fff
}

.t-sm {
  font-size: 1em
}

.t-white .t-sm,
.t-white .t-sm * {
  color: rgba(255, 255, 255, .66)
}

.srl__vizualization-types {
  background: #f9fafc;
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0 1.25em;
  border-bottom: 1px solid #e5eaf0;
}

.srl__vizualization-types li {
  margin: 0 1em 0 0;
  padding: 1em 1.25em 0.5em;
  border-bottom: 6px solid transparent;
}

.srl__vizualization-types li a {
  color: rgba(28, 47, 58, .5);
}


.srl__vizualization-types .srl__vizualization-types__active-type {
  border-bottom-color: #63a7d4;
}

.srl__vizualization-types .srl__vizualization-types__active-type a {
  color: #1c2f3a;
}

.hierplane__visualization-verbs {
  background: #f9fafc;
  padding: 1em 1.25em;
  border-bottom: 1px solid #e5eaf0;
  color: rgba(28, 47, 58, .5);
}

.hierplane__visualization-verbs a {
  display: inline-block;
  margin-right: 1em;
}

.hierplane__visualization-verbs a svg {
  fill: rgba(28, 47, 58, .5);
}

.hierplane__visualization-verbs a:hover svg {
  fill: #1c2f3a;
}

.hierplane__visualization-verbs__prev {
  transform: rotateY(-180deg);
}

.hierplane__visualization-verbs__label {
  user-select: none;
}

/* THESE ARE HACKS PUT HERE BY CODEVIKING. */

/*
  Center the controls in the toolbar.
 */
.hierplane__visualization .hierplane .parse-tree-toolbar .parse-tree-toolbar__item .parse-tree-toolbar__item__label {
  top: 50%;
  margin-top: -13px;
}

/*
  Make the toolbar background transparent, as it looks weird when it matches the color of the
  tab / verb-select bars.
 */
.hierplane__visualization .hierplane--theme-light .parse-tree-toolbar {
  background: transparent;
  border: none;
}
.hierplane__visualization .hierplane--theme-light .parse-tree-toolbar:before {
  background: transparent;
  border: none;
}

/*
   This eliminates the negative left margin used to artifically bump punctuation such that it
   doesn't appear to have space before it. This isn't worth the side-effect in SRL, as here
   we have spans that contain things other than punctuation that are ignored. This can in the
   long run potentially be fixed in hierplane...but that might not happen.
*/
.hierplane__visualization .hierplane #passage p .passage__readonly .span-slice__ignored {
  margin-left: 0 !important;
}

/*
  Set a max width so that nodes aren't too wide, since some of the nodes in the AllenNLP
  SRL output can contain large passages of text.
*/
.hierplane__visualization .hierplane .node__word__label .node__word__label__siblings {
  max-width: 15vw;
  white-space: normal;
}

/*
  Adjust the "passage" display so that it accomodates the entire sentence, if possible. This
  prevents the user from having to scroll when the sentence is long.
*/
.hierplane__visualization .hierplane--theme-light #passage {
  max-height: initial;
  height: auto !important;
  flex: 1;
}

/*
  Resolve wrapping issues.
 */
.hierplane__visualization .hierplane #passage p span {
  display: inline;
}

